# ollama-nuggets

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
context-length/: experiment.ipynb  output-gpt-4o-mini.txt  output-llama3.2.txt
